add swager
